Lesson 03 items & extra info in inwwestowanie.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <header id="top">
             <h1>Marcin Bońka - Moja nauka frontendu</h1>
-            <p>Dlaczego zdecydowałem się na ten kurs?</p>
+            <p>Dlaczego zdecydowałem się na ten kurs ?</p>
             <section>Zawodowo zajmuję się rozwojem oprogramowania dla systemów pomiarowych w środowisku .net. Wszystkie aplikacje, biblioteki sprzętowe jak również systemy raportowania 
                 i analizy wyników pomiarowych przygotowuję w wersji desktop. Istnieje jednak silna potrzeba aby w niedalekiej przyszłości raportowanie i wizualizację
                 wyników przenieść na stronę internetowa. Zakładam, że kurs "Co ten frontend" dostarczy mi odpowienie podstawy do realizacji tej operacji tudzież skróci czas wymagany do zdobycia
@@ -58,6 +58,15 @@
                 <p>- dodawanie listy todo</p>
                 <p> A tutaj taki ćwiczebny link do <a href="https://trello.com/">TRELLO</a> </p>
             <p>3.2. Nowe elementy HTML-a</p>
+            <p>3.3. Nazewnictwo: Camel, Kebab, Snake, Pascal</p>
+            <p>3.4. Kolejna porcja stylowania css</p>
+                <p>- Uzycie klas</p>
+                <p>- Użycie id </p>
+            <p>3.5. Działanie internetu i przeglądarki</p>
+            <p>3.6. Java Script</p>
+                <p>- Wyswietlanie komuniatów (Alert)</p>
+                <p>- Przesyłanie informacji do loga console.log('')</p>
+            <p>3.7. Terminal: podstawowe polecenia w zakresie poruszania się po strukturze katalogów</p>
         </section>
     </main>
     <footer>
