--- a/inwestowanie.html
+++ b/inwestowanie.html
@@ -18,10 +18,11 @@
     <main>
         <h1>Inwestowanie</h1>
             <section>
-                Tak naprawdę nie wiem czy to co robię jest inwestowaniem czy bardziej spekulacja. Sądzę że nie ma to znaczenia tak długo jak <br>
+                Tak naprawdę nie wiem czy to co robię jest inwestowaniem czy bardziej spekulacją. Sądzę że nie ma to znaczenia tak długo jak <br>
                 można na tym zarabiać.<br>
                 <b>Nie jest to jednak łatwa sztuka jak mogłoby się wydawać.</b><br>
-
+                <p>Nigdy nie poświęciłem się temu zagadnieniu na maxa i można powiedzieć że cały czas się uczę, cały czas poszukuję swojego stylu</p>
+                Zauważyłem, że bardzo mi odpowiada gra w trendzie bocznym.
             </section>
     </main>
 </body>
