Znaczna przebudowa strony. Zmiana podstawowego kolory tła i tekstu, stylowanie nawigacji i stopki, stylowanie tekstu na stronie 'Elektronika'

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="inwestowanie.html">Inwestowanie</a>
-            <a href="elektronika.html">Elektronika</a>
-            <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-            <a href="omnie.html">O mnie</a>
-        </nav>
+        <div class="navi-box">
+            <nav>
+                <a href="index.html">Strona główna</a>
+                <a href="inwestowanie.html">Inwestowanie</a>
+                <a href="elektronika.html">Elektronika</a>
+                <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
+                <a href="omnie.html">O mnie</a>
+            </nav>
+        </div>
     </header>
     <main>
         <header id="top">
@@ -34,7 +36,7 @@
             <p>1.4. Wymagane narzędzie (do instalacji): Google chrome, Visual Studio Code, Slack, Grupa facebook</p>
             <p>1.5. Potencjalna kariera: Stażysta, Mid, Senior, Expert (uwaga może być skrzywiony)</p>
 
-            <h2 style="color:chocolate;"> Lekcja nr. 2.</h2>
+            <h2 class="lesson-header"> Lekcja nr. 2.</h2>
             <p>2.1. Warstwy</p>
                     <p>0: Treść, </p>
                     <p>1: Semantyka html,</p>
@@ -51,7 +53,7 @@
             <p>2.5. Java Script</p>
                     Tutaj narazie bez notatek, zakładam że nauka podstaw odmiennego (chodź w wielku kwestiach podobnego do C#) języka programowania nie będzie stanowić problemu.
             
-            <h2>Lekcja nr. 3.</h2>
+            <h2 class="lesson-header">Lekcja nr. 3.</h2>
             <p>3.1. Trello</p>
                 <p>- dodawanie tablic</p>
                 <p>- dodawanie kart</p>
