--- a/mojapraca.html
+++ b/mojapraca.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="inwestowanie.html">Inwestowanie</a>
-            <a href="elektronika.html">Elektronika</a>
-            <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-            <a href="omnie.html">O mnie</a>
-        </nav>
+        <div class="navi-box">
+            <nav>
+                <a href="index.html">Strona główna</a>
+                <a href="inwestowanie.html">Inwestowanie</a>
+                <a href="elektronika.html">Elektronika</a>
+                <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
+                <a href="omnie.html">O mnie</a>
+            </nav>
+        </div>
     </header>
     <main>
         <h1>Moja praca zawodowa</h1>
