Update of onvestments page with features learned in lesson 4

--- a/inwestowanie.html
+++ b/inwestowanie.html
@@ -27,6 +27,30 @@
                 <p>Nigdy nie poświęciłem się temu zagadnieniu na maxa i można powiedzieć że cały czas się uczę, cały czas poszukuję swojego stylu</p>
                 Zauważyłem, że bardzo mi odpowiada gra w trendzie bocznym.
             </section>
+            <section>
+                <br>
+                Moje doświadczenie w zakresie inwestowania <br>
+                <div class="box-investment-experience">
+                    <div class="box-investment-experience-bar">Akcje na GPW</div>
+                </div>
+                <div class="box-investment-experience">
+                    <div class="box-investment-experience-bar">CFD na akcje amerykańskie</div>
+                </div>
+                <div class="box-investment-experience">
+                    <div class="box-investment-experience-bar">Forex</div>
+                </div>
+                <div class="box-investment-experience">
+                    <div class="box-investment-experience-bar">Kontrakty terminowe GPW</div>
+                </div>
+                <div class="box-investment-experience">
+                    <div class="box-investment-experience-bar">ETF-y</div>
+                </div>
+            </section>
+            <div class="box-invetments-goldenrules">
+                Aktualne zasady tzw. GoldenRules
+                <div class="box-investment-goldenrule" style="left: 30px; top: 50px; background:brown;z-index: 100;">Nie ryzykuj więcej niż 2.5% kapitału</div>
+                <div class="box-investment-goldenrule" style="left: 70px; top: 80px;  background:rgb(7, 88, 41);z-index: 99;">Miej zawsze ustalony stop-loss lub stop-out</div> 
+            </div>
     </main>
 </body>
 </html>
