Updated 'Moja praca zawodowa' page with new features learned based on lesson 04 of the training

--- a/elektronika.html
+++ b/elektronika.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <header>
-            <div class="navi-box">
-                <nav>
-                    <a href="index.html">Strona główna</a>
-                    <a href="inwestowanie.html">Inwestowanie</a>
-                    <a href="elektronika.html">Elektronika</a>
-                    <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-                    <a href="omnie.html">O mnie</a>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <h1>Elektronika</h1>
-                <div class="box-picturetext">
-                    <div class="box-picturetext-picture"><img src="elektronika1.jpg" alt="Elektronika mainboard"> </div>
-                    <div class="box-picturetext-text">Elektroniką interesuję się mniej więcej od 13-stego roku życia.
-                            Zainteresowanie pojawiło się w momencie uszkodzenia wieży magnetofonowej i podglądniu próby
-                            naprawy przez elektronika-samouka. Elektronik wieżę naprawił jednak to zdarzenie dało mi impuls
-                            do zdobycia większej wiedzy na temat tego o co w tej całej elektronice chodzi. Jakoś zbiegło się
-                            to z momentem wyboru szkoły średniej i w naturalny sposób wybór padł na technikum elektroniczne we
-                            Wronkach.
-                    </div>    
-                </div>
-                <div class="box-electronica-content">
-                    Aktualnie na typową elektronikę poświęcam ograniczoną ilość czasu z uwago na dodatkowe obowiązki związane z remontem
-                    wokół domu oraz nauką frontendu. Dochodzi jeszcze czas wymagany na inwestowanie.
-                </div>
-        </main>   
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="navi-box">
+        <nav>
+          <a href="index.html">Strona główna</a>
+          <a href="inwestowanie.html">Inwestowanie</a>
+          <a href="elektronika.html">Elektronika</a>
+          <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
+          <a href="omnie.html">O mnie</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <h1>Elektronika</h1>
+      <div class="box-picturetext">
+        <div class="box-picturetext-picture">
+          <img src="elektronika1.jpg" alt="Elektronika mainboard" />
+        </div>
+        <div class="box-picturetext-text">
+          Elektroniką interesuję się mniej więcej od 13-stego roku życia.
+          Zainteresowanie pojawiło się w momencie uszkodzenia wieży
+          magnetofonowej i podglądniu próby naprawy przez elektronika-samouka.
+          Elektronik wieżę naprawił jednak to zdarzenie dało mi impuls do
+          zdobycia większej wiedzy na temat tego o co w tej całej elektronice
+          chodzi. Jakoś zbiegło się to z momentem wyboru szkoły średniej i w
+          naturalny sposób wybór padł na technikum elektroniczne we Wronkach.
+        </div>
+      </div>
+      <div class="box-electronica-content">
+        Aktualnie na typową elektronikę poświęcam ograniczoną ilość czasu z
+        uwago na dodatkowe obowiązki związane z remontem wokół domu oraz nauką
+        frontendu. Dochodzi jeszcze czas wymagany na inwestowanie.
+      </div>
+    </main>
+  </body>
 </html>
