--- a/mojapraca.html
+++ b/mojapraca.html
@@ -1,29 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="navi-box">
-            <nav>
-                <a href="index.html">Strona główna</a>
-                <a href="inwestowanie.html">Inwestowanie</a>
-                <a href="elektronika.html">Elektronika</a>
-                <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-                <a href="omnie.html">O mnie</a>
-            </nav>
-        </div>
+      <div class="navi-box">
+        <nav>
+          <a href="index.html">Strona główna</a>
+          <a href="inwestowanie.html">Inwestowanie</a>
+          <a href="elektronika.html">Elektronika</a>
+          <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
+          <a href="omnie.html">O mnie</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <h1>Moja praca zawodowa</h1>
-            <section>
-                To czym się zajmuję zawodowo stanowi w pewnym sensie połączenie czegoś czym się interesuję czyli elektroniki i programowania <br>
-                To połączenie, które lubię sprawia że czuję się dodatkowo zmotywowany wykonując powierzone zadania    
-            </section>
+      <h1>Moja praca zawodowa</h1>
+      <section>
+        To czym się zajmuję zawodowo stanowi w pewnym sensie połączenie czegoś
+        czym się interesuję czyli elektroniki i programowania <br />
+        To połączenie, które lubię sprawia że czuję się dodatkowo zmotywowany
+        wykonując powierzone zadania
+      </section>
+      <div style="background-color: darkblue;">
+        <div class="box-mysticky1">
+          Tutaj będę chciał przetestować position siticky
+        </div>
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        <div class="box-myfloat1">To jest mój float</div>
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+        To jest tekst w ramach parenta dla sticky <br />
+      </div>
+      <section>
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+        To jest tekst poza parentem dla sticky <br />
+      </section>
     </main>
-</body>
+  </body>
 </html>
