--- a/omnie.html
+++ b/omnie.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="navi-box">
-            <nav>
-                <a href="index.html">Strona główna</a>
-                <a href="inwestowanie.html">Inwestowanie</a>
-                <a href="elektronika.html">Elektronika</a>
-                <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-                <a href="omnie.html">O mnie</a>
-            </nav>
-        </div>
+      <div class="navi-box">
+        <nav>
+          <a href="index.html">Strona główna</a>
+          <a href="inwestowanie.html">Inwestowanie</a>
+          <a href="elektronika.html">Elektronika</a>
+          <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
+          <a href="omnie.html">O mnie</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <header>
-            <h1>Kilka słów o mnie</h1>
-            <section>Nazywam sie Marcin Bońka. Mieszkam w średniej miejscowości zwanej Piła. Tutaj również pracuję. <br>
-                Posiadam klka punktów zainteresowań. Należą do nich: <br>
-                1. Programowanie <br>
-                2. Inwestowanie/Spekulacja na rynkach finansowych. <br>
-                3. Elektronika <br>    
-            </section>
-        </header>
+      <header>
+        <h1>Kilka słów o mnie</h1>
         <section>
-            <h2>Rodzina</h2>
-            <p>Posiadam żonę Magdalenę, dwie córki i jednego syna</p><br>
-            Pod domu biegają zwiarzaki w postaci kota i psa.    
+          Nazywam sie Marcin Bońka. Mieszkam w średniej miejscowości zwanej
+          Piła. Tutaj również pracuję. <br />
+          Posiadam klka punktów zainteresowań. Należą do nich: <br />
+          1. Programowanie <br />
+          2. Inwestowanie/Spekulacja na rynkach finansowych. <br />
+          3. Elektronika <br />
         </section>
+      </header>
+      <section>
+        <h2>Rodzina</h2>
+        <p>Posiadam żonę Magdalenę, dwie córki i jednego syna</p>
+        <br />
+        Pod domu biegają zwiarzaki w postaci kota i psa.
+      </section>
     </main>
-    
-</body>
+  </body>
 </html>
