--- a/index.html
+++ b/index.html
@@ -8,67 +8,73 @@
 </head>
 <body>
     <header>
-        <div class="navi-box">
+        <div class="navi">
             <nav>
-                <a href="index.html">Strona główna</a>
-                <a href="inwestowanie.html">Inwestowanie</a>
-                <a href="elektronika.html">Elektronika</a>
-                <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-                <a href="omnie.html">O mnie</a>
+                <a class="navi__link navi__link--red" href="index.html">Strona główna</a>
+                <a class="navi__link" href="inwestowanie.html">Inwestowanie</a>
+                <a class="navi__link" href="elektronika.html">Elektronika</a>
+                <a class="navi__link" href="mojapraca.html">Czym się zajmuję zawodowo</a>
+                <a class="navi__link" href="omnie.html">O mnie</a>
             </nav>
         </div>
     </header>
     <main>
         <header id="top">
-            <h1>Marcin Bońka - Moja nauka frontendu</h1>
+            <h1>Marcin Bońka - Moja szybka nauka frontendu</h1>
             <p>Dlaczego zdecydowałem się na ten kurs ?</p>
             <section>Zawodowo zajmuję się rozwojem oprogramowania dla systemów pomiarowych w środowisku .net. Wszystkie aplikacje, biblioteki sprzętowe jak również systemy raportowania 
                 i analizy wyników pomiarowych przygotowuję w wersji desktop. Istnieje jednak silna potrzeba aby w niedalekiej przyszłości raportowanie i wizualizację
                 wyników przenieść na stronę internetowa. Zakładam, że kurs "Co ten frontend" dostarczy mi odpowienie podstawy do realizacji tej operacji tudzież skróci czas wymagany do zdobycia
-                poczatkowej wiedzy
+                poczatkowej wiedzy.
+                <br>
+                <br>
             </section>
         </header>
-        <section>
-            <h2 class="lesson-header">Lekcja nr. 1</h2>
-            <p>1.1. Co to jest frontend.</p> 
-            <p>1.2. Podstawowe elementy (składniki frontendu): HTML, CSS, Java Script</p>
-            <p>1.3. Różnice pomiędzy frontend a backend</p>
-            <p>1.4. Wymagane narzędzie (do instalacji): Google chrome, Visual Studio Code, Slack, Grupa facebook</p>
-            <p>1.5. Potencjalna kariera: Stażysta, Mid, Senior, Expert (uwaga może być skrzywiony)</p>
-
-            <h2 class="lesson-header"> Lekcja nr. 2.</h2>
-            <p>2.1. Warstwy</p>
-                    <p>0: Treść, </p>
-                    <p>1: Semantyka html,</p>
-                    <p>2: Prezentacja (CSS),</p>
-                    <p>3. Interakcja (JS)</p>
-                <h5><p>HINT: Nie używaj JS do czegoś co możesz zrobić HTML-em.</p></h5>
-            <p>2.2. Znaczniki HTML: main, section, article, header, footer, h1-h6, p </p>
-            <p>2.3. Walidator HTML</p>
-            <p>2.4. CSS: Reguła </p>
-                    <p>- selector = Co chcemy ostylować, właściwość, wartość </p>
-                    <p>- Umieszczamuy w sekcji head (nie ma być widoczny) lub w zewn pliku .css </p>
-                    <p>- Umieszczamy wewnatrz znacznika 'style'</p>
-                    <p><h5>HINT: Kolor można podawać w postaci hexdecymalnej (rgb)</h5></p>
-            <p>2.5. Java Script</p>
-                    Tutaj narazie bez notatek, zakładam że nauka podstaw odmiennego (chodź w wielku kwestiach podobnego do C#) języka programowania nie będzie stanowić problemu.
-            
-            <h2 class="lesson-header">Lekcja nr. 3.</h2>
-            <p>3.1. Trello</p>
-                <p>- dodawanie tablic</p>
-                <p>- dodawanie kart</p>
-                <p>- dodawanie listy todo</p>
-                <p> A tutaj taki ćwiczebny link do <a href="https://trello.com/">TRELLO</a> </p>
-            <p>3.2. Nowe elementy HTML-a</p>
-            <p>3.3. Nazewnictwo: Camel, Kebab, Snake, Pascal</p>
-            <p>3.4. Kolejna porcja stylowania css</p>
-                <p>- Uzycie klas</p>
-                <p>- Użycie id </p>
-            <p>3.5. Działanie internetu i przeglądarki</p>
-            <p>3.6. Java Script</p>
-                <p>- Wyswietlanie komuniatów (Alert)</p>
-                <p>- Przesyłanie informacji do loga console.log('')</p>
-            <p>3.7. Terminal: podstawowe polecenia w zakresie poruszania się po strukturze katalogów</p>
+        <section class="wtf_frontend">
+            <div class="wtf_frontend__lesson">
+                <h2 class="lesson-header">Lekcja nr. 1</h2>
+                <p>1.1. Co to jest frontend.</p> 
+                <p>1.2. Podstawowe elementy (składniki frontendu): HTML, CSS, Java Script</p>
+                <p>1.3. Różnice pomiędzy frontend a backend</p>
+                <p>1.4. Wymagane narzędzie (do instalacji): Google chrome, Visual Studio Code, Slack, Grupa facebook</p>
+                <p>1.5. Potencjalna kariera: Stażysta, Mid, Senior, Expert (uwaga może być skrzywiony)</p>
+            </div>
+            <div class="wtf_frontend__lesson">
+                <h2 class="lesson-header"> Lekcja nr. 2.</h2>
+                <p>2.1. Warstwy</p>
+                        <p>0: Treść, </p>
+                        <p>1: Semantyka html,</p>
+                        <p>2: Prezentacja (CSS),</p>
+                        <p>3. Interakcja (JS)</p>
+                    <h5><p>HINT: Nie używaj JS do czegoś co możesz zrobić HTML-em.</p></h5>
+                <p>2.2. Znaczniki HTML: main, section, article, header, footer, h1-h6, p </p>
+                <p>2.3. Walidator HTML</p>
+                <p>2.4. CSS: Reguła </p>
+                        <p>- selector = Co chcemy ostylować, właściwość, wartość </p>
+                        <p>- Umieszczamuy w sekcji head (nie ma być widoczny) lub w zewn pliku .css </p>
+                        <p>- Umieszczamy wewnatrz znacznika 'style'</p>
+                        <p><h5>HINT: Kolor można podawać w postaci hexdecymalnej (rgb)</h5></p>
+                <p>2.5. Java Script</p>
+                        Tutaj narazie bez notatek, zakładam że nauka podstaw odmiennego (chodź w wielku kwestiach podobnego do C#) języka programowania nie będzie stanowić problemu.
+            </div>
+            <div class="wtf_frontend__lesson">
+                <h2 class="lesson-header">Lekcja nr. 3.</h2>
+                <p>3.1. Trello</p>
+                    <p>- dodawanie tablic</p>
+                    <p>- dodawanie kart</p>
+                    <p>- dodawanie listy todo</p>
+                    <p> A tutaj taki ćwiczebny link do <a href="https://trello.com/">TRELLO</a> </p>
+                <p>3.2. Nowe elementy HTML-a</p>
+                <p>3.3. Nazewnictwo: Camel, Kebab, Snake, Pascal</p>
+                <p>3.4. Kolejna porcja stylowania css</p>
+                    <p>- Uzycie klas</p>
+                    <p>- Użycie id </p>
+                <p>3.5. Działanie internetu i przeglądarki</p>
+                <p>3.6. Java Script</p>
+                    <p>- Wyswietlanie komuniatów (Alert)</p>
+                    <p>- Przesyłanie informacji do loga console.log('')</p>
+                <p>3.7. Terminal: podstawowe polecenia w zakresie poruszania się po strukturze katalogów</p>
+            </div>
         </section>
     </main>
     <footer>
