--- a/inwestowanie.html
+++ b/inwestowanie.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <header>
-      <div class="navi-box">
-        <nav>
-          <a href="index.html">Strona główna</a>
-          <a href="inwestowanie.html">Inwestowanie</a>
-          <a href="elektronika.html">Elektronika</a>
-          <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-          <a href="omnie.html">O mnie</a>
-        </nav>
+      <div class="navi">
+          <nav>
+              <a class="navi__link navi__link--red" href="index.html">Strona główna</a>
+              <a class="navi__link" href="inwestowanie.html">Inwestowanie</a>
+              <a class="navi__link" href="elektronika.html">Elektronika</a>
+              <a class="navi__link" href="mojapraca.html">Czym się zajmuję zawodowo</a>
+              <a class="navi__link" href="omnie.html">O mnie</a>
+          </nav>
       </div>
-    </header>
+  </header>
     <main>
       <h1>Inwestowanie</h1>
       <section>
@@ -31,44 +31,43 @@
         </p>
         Zauważyłem, że bardzo mi odpowiada gra w trendzie bocznym.
       </section>
-      <section>
+      <section class="investment-experience">
         <br />
         Moje doświadczenie w zakresie inwestowania <br />
-        <div class="box-investment-experience">
-          <div class="box-investment-experience-bar">Akcje na GPW</div>
+        <div class="investment-experience__box">
+          <div class="investment-experience__box__bar">Akcje na GPW</div>
         </div>
-        <div class="box-investment-experience">
-          <div class="box-investment-experience-bar">
+        <div class="investment-experience__box">
+          <div class="investment-experience__box__bar">
             CFD na akcje amerykańskie
           </div>
         </div>
-        <div class="box-investment-experience">
-          <div class="box-investment-experience-bar">Forex</div>
+        <div class="investment-experience__box">
+          <div class="investment-experience__box__bar">Forex</div>
         </div>
-        <div class="box-investment-experience">
-          <div class="box-investment-experience-bar">
+        <div class="investment-experience__box">
+          <div class="investment-experience__box__bar">
             Kontrakty terminowe GPW
           </div>
         </div>
-        <div class="box-investment-experience">
-          <div class="box-investment-experience-bar">ETF-y</div>
+        <div class="investment-experience__box">
+          <div class="investment-experience__box__bar">ETF-y</div>
         </div>
       </section>
-      <div class="box-invetments-goldenrules">
+
+      <div class="investment-goldenrules">
         Aktualne zasady tzw. GoldenRules
         <div
-          class="box-investment-goldenrule"
-          style="left: 30px; top: 50px; background: brown; z-index: 100;"
+          class="investment-goldenrule__box investment-goldenrule__box--red"
+          style="left: 30px; top: 50px;"
         >
           Nie ryzykuj więcej niż 2.5% kapitału
         </div>
         <div
-          class="box-investment-goldenrule"
+          class="investment-goldenrule__box"
           style="
             left: 70px;
-            top: 80px;
-            background: rgb(7, 88, 41);
-            z-index: 99;
+            top: 80px;           
           "
         >
           Miej zawsze ustalony stop-loss lub stop-out
