--- a/mojapraca.html
+++ b/mojapraca.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <header>
-      <div class="navi-box">
-        <nav>
-          <a href="index.html">Strona główna</a>
-          <a href="inwestowanie.html">Inwestowanie</a>
-          <a href="elektronika.html">Elektronika</a>
-          <a href="mojapraca.html">Czym się zajmuję zawodowo</a>
-          <a href="omnie.html">O mnie</a>
-        </nav>
+      <div class="navi">
+          <nav>
+              <a class="navi__link navi__link--red" href="index.html">Strona główna</a>
+              <a class="navi__link" href="inwestowanie.html">Inwestowanie</a>
+              <a class="navi__link" href="elektronika.html">Elektronika</a>
+              <a class="navi__link" href="mojapraca.html">Czym się zajmuję zawodowo</a>
+              <a class="navi__link" href="omnie.html">O mnie</a>
+          </nav>
       </div>
-    </header>
+  </header>
     <main>
       <h1>Moja praca zawodowa</h1>
       <section>
