DOM & Update content with lesson4

--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
                     <p>- Przesyłanie informacji do loga console.log('')</p>
                 <p>3.7. Terminal: podstawowe polecenia w zakresie poruszania się po strukturze katalogów</p>
             </div>
+            <div class="wtf_frontend__lesson">
+                <h2 class="lesson-header">Lekcja nr. 4.</h2>
+                <p>4.1. GIT</p>
+                <p>4.2. GitHub</p>
+                <p>4.3. Box model</p>
+                <p>- rozmiar</p>
+                <p>- sposoby wyświetlania (inline / inline-block etc...)</p>
+                <p>- jednostki (px/%/vw)</p>
+                <p>- padding, margin, border</p>
+                <p>- box-sizing (odnoszenie się do wymiarów zewnętrznych)</p>
+                <p>- position (relative / absolute / fixed / sticky)</p>
+                <p>- float (otaczanie tekstem)</p>
+                <p>4.4. JS: Typy danych</p>
+                <p>4.5. Formatowanie kodu i lokalny serwer</p>
+                <p>4.6. BEM: Block Element Modifier (Block__Element--Modifier)</p>
+                <p>4.7. JS: DOM (połączenie z html-em)</p>
+            </div>
         </section>
     </main>
     <footer>
