--- a/inwestowanie.html
+++ b/inwestowanie.html
@@ -36,11 +36,17 @@
         Moje doświadczenie w zakresie inwestowania <br />
         <div class="investment-experience__box">
           <div class="investment-experience__box__bar">Akcje na GPW</div>
-        </div>
-        <div class="investment-experience__box">
-          <div class="investment-experience__box__bar">
-            CFD na akcje amerykańskie
+          <div class="investment-experience__box__content--akcgpw-js">
+
           </div>
+        </div>
+        <div class="investment-experience__box ">
+          <div class="investment-experience__box__bar">
+            CFD na akcje am
+          </div>
+          <div>
+            Wykorzytywałem do tego brokera ETX. zagrania ze zmiennym szczęciem jednak pewne problemy z wypłatą środków
+          </div>         
         </div>
         <div class="investment-experience__box">
           <div class="investment-experience__box__bar">Forex</div>
@@ -74,5 +80,6 @@
         </div>
       </div>
     </main>
+    <script src="inwestowanie.js"></script> 
   </body>
 </html>
