--- a/omnie.html
+++ b/omnie.html
@@ -16,6 +16,7 @@
               <a class="navi__link" href="elektronika.html">Elektronika</a>
               <a class="navi__link" href="mojapraca.html">Czym się zajmuję zawodowo</a>
               <a class="navi__link" href="omnie.html">O mnie</a>
+              <a class="navi__link" href="myhouse.html">Prace domowe</a>
           </nav>
       </div>
   </header>
