Added grid to my house.html, added flexbox to inwestowanie.html

--- a/elektronika.html
+++ b/elektronika.html
@@ -20,7 +20,7 @@
           </nav>
       </div>
   </header>
-    <main class="">
+    <main>
       <h1>Elektronika</h1>
       <div class="box-picturetext">
         <div class="box-picturetext-picture">
