--- a/inwestowanie.html
+++ b/inwestowanie.html
@@ -33,9 +33,10 @@
         </p>
         Zauważyłem, że bardzo mi odpowiada gra w trendzie bocznym.
       </section>
+      <br />
+        Moje doświadczenie w zakresie inwestowania 
+      <br />
       <section class="investment-experience">
-        <br />
-        Moje doświadczenie w zakresie inwestowania <br />
         <div class="investment-experience__box">
           <div class="investment-experience__box__bar">Akcje na GPW</div>
           <div class="investment-experience__box__content--akcgpw-js">
