--- a/myhouse.html
+++ b/myhouse.html
@@ -21,8 +21,8 @@
         </nav>
       </div>
     </header>
-    <main>
-      <header class="header-main">
+    <main class="main__myhouse">
+      <header class="main__myhouse__mainheader">
         <h1>Prace domowe</h1>
         <p>
           Od momentu zakupu domu w 2015 roku zarówno wewnątrz jak i na zewnątrz
@@ -35,11 +35,14 @@
           modernizacją naszego domu
         </p>
       </header>
-      <header class="header-grid">
+      <article class="main__myhouse__gridheader main__myhouse__gridheader--ourwork">
         <div>Operacje nasze</div>
+      </article>
+      <article class="main__myhouse__gridheader main__myhouse__gridheader--orderedwork">
         <div>Operacje zlecone</div>
-      </header>
-      <article class="article-ourwork">
+      </article>
+      
+      <article class="main__myhouse__article__ourwork">
         <div>
           <article>
             <h2>Demontaż podłóg</h2>
@@ -76,11 +79,10 @@
               Nulla blandit egestas ullamcorper. Praesent pretium non elit sed
               finibus.
             </p>
-            >
           </article>
         </div>
       </article>
-      <article class="article-orderedourwork">
+      <article class="main__myhouse__article__orderedwork">
         <article>
           <h2>Usunięcie bitumitu</h2>
           <p>
@@ -122,7 +124,7 @@
           </p>
         </article>
       </article>
-      <aside class="aside">
+      <aside class="main__myhouse__aside">
         <article>
           <h2>Zabudowa GK</h2>
           <p>
@@ -195,7 +197,7 @@
         </article>
       </aside>
 
-      <footer>
+      <footer class="main__myhouse__footer">
         A to jest przykładowa stopka<br />
         <a href="#top">Wróć na górę dokumentu</a>
       </footer>
