Updated index page with navigation menu showing up in mobile mode if button clicked

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 <body>
     <header>
-        <div class="navi">
+        <div class="navi navi--js">
             <nav>
                 <a class="navi__link navi__link--red" href="index.html">Strona główna</a>
                 <a class="navi__link" href="inwestowanie.html">Inwestowanie</a>
                 <a class="navi__link" href="elektronika.html">Elektronika</a>
                 <a class="navi__link" href="mojapraca.html">Czym się zajmuję zawodowo</a>
                 <a class="navi__link" href="omnie.html">O mnie</a>
-                <a class="navi__link" href="myhouse.html">Prace domowe</a>
+                <a class="navi__link" href="myhouse.html">Prace domowe</a>`
             </nav>
         </div>
+        <button class="btnHamburger btnHamburger--js">menu</button>
     </header>
-    <main>
+    <main class="index__main--js main--shiftsmall--js">
         <header id="top">
-            <h1>Marcin Bońka - Moja szybka nauka frontendu</h1>
+            <h1 class="index__heading">Marcin Bońka - Moja szybka nauka frontendu</h1>
+            <button class="buttonClickMe__action--js">Please click me</button>
             <p>Dlaczego zdecydowałem się na ten kurs ?</p>
             <section>Zawodowo zajmuję się rozwojem oprogramowania dla systemów pomiarowych w środowisku .net. Wszystkie aplikacje, biblioteki sprzętowe jak również systemy raportowania 
                 i analizy wyników pomiarowych przygotowuję w wersji desktop. Istnieje jednak silna potrzeba aby w niedalekiej przyszłości raportowanie i wizualizację
