Added trainig grid to elektronika.html (with styles)

--- a/elektronika.html
+++ b/elektronika.html
@@ -41,6 +41,10 @@
         uwago na dodatkowe obowiązki związane z remontem wokół domu oraz nauką
         frontendu. Dochodzi jeszcze czas wymagany na inwestowanie.
       </div>
+      <div class="mygrid_container">
+        <div class="mygrid_item1">Item1</div>
+        <div class="mygrid_item2">Item2</div>
+      </div>
     </main>
   </body>
 </html>
